--- a/QuanLyHocSinh/GUI/MainWindow.xaml
+++ b/QuanLyHocSinh/GUI/MainWindow.xaml
@@ -1,144 +1,77 @@
 ﻿<Window x:Class="GUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GUI"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="440" Width="800"
-        Loaded="Window_Loaded">
-    <StackPanel>
-        <StackPanel x:Name="stPn_ThongTin">
-            <StackPanel.Resources>
-                <Style x:Key="grid" TargetType="Grid">
-                    <Setter Property="Width" Value="700"/>
-                    <Setter Property="HorizontalAlignment" Value="Center"/>
-                    <Setter Property="VerticalAlignment" Value="Top"/>
-                    <Setter Property="Margin" Value="0,15,0,0"/>
-                </Style>
-                <Style x:Key="lb" TargetType="Label">
-                    <Setter Property="FontSize" Value="16"/>
-                    <Setter Property="FontWeight" Value="Bold"/>
-                </Style>
-                <Style x:Key="txBx" TargetType="TextBox">
-                    <Setter Property="FontSize" Value="24"/>
-                </Style>
-                <Style x:Key="CustomTextBox1" BasedOn="{StaticResource MaterialDesignOutlinedTextBox}" TargetType="TextBox">
-                    <Setter Property="TextElement.FontSize" Value="15"/>
-                    <Setter Property="materialDesign:HintAssist.IsFloating" Value="False"/>
-                </Style>
-                <Style x:Key="CustomTextBox2" BasedOn="{StaticResource MaterialDesignOutlinedTextBox}" TargetType="TextBox">
-                    <Setter Property="TextElement.FontSize" Value="15"/>
-                </Style>
-            </StackPanel.Resources>
-            <Grid Style="{StaticResource grid}">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="0.5*"/>
-                    <ColumnDefinition Width="4*"/>
-                    <ColumnDefinition Width="0.5*"/>
-                    <ColumnDefinition Width="2*"/>
-                </Grid.ColumnDefinitions>
-                
-                <StackPanel Grid.Column="0">
-                    <TextBlock Text="Mã học sinh" 
-                               Style="{StaticResource MaterialDesignBody1TextBlock}" 
-                               Margin="0,0,0,5"/>
-                    <TextBox x:Name="txBx_MaHS"
-                             Style="{StaticResource CustomTextBox1}"
-                             materialDesign:HintAssist.Hint="Mã học sinh"
-                             IsReadOnly="True"
-                             Background="#CCCCCC"
-                             Cursor="Arrow"/>
-                </StackPanel>
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        TextElement.FontWeight="Regular"
+        TextElement.FontSize="13"
+        TextOptions.TextFormattingMode="Ideal"
+        TextOptions.TextRenderingMode="Auto"
+        Background="{DynamicResource MaterialDesignPaper}"
+        FontFamily="{materialDesign:MaterialDesignFont}"
+        Title="Quản Lý Học Sinh" Height="600" Width="1200"
+        WindowStartupLocation="CenterScreen">
+    <Grid>
+        <!-- Chia layout thành 2 cột -->
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="250"/> <!-- Cột cho thanh điều hướng -->
+            <ColumnDefinition Width="*"/>   <!-- Cột cho nội dung -->
+        </Grid.ColumnDefinitions>
 
-                <StackPanel Grid.Column="2">
-                    <TextBlock Text="Họ và tên" 
-                               Style="{StaticResource MaterialDesignBody1TextBlock}" 
-                               Margin="0,0,0,5"/>
-                    <TextBox x:Name="txBx_HoTen"
-                             Style="{StaticResource CustomTextBox1}"
-                             materialDesign:HintAssist.Hint="Họ và tên"/>
-                </StackPanel>
+        <!-- Thanh điều hướng bên trái -->
+        <materialDesign:Card Grid.Column="0" Margin="10" UniformCornerRadius="8">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
 
-                <StackPanel Grid.Column="4">
-                    <TextBlock Text="Giới tính" 
-                               Style="{StaticResource MaterialDesignBody1TextBlock}" 
-                               Margin="0,0,0,5"/>
-                    <TextBox x:Name="txBx_GioiTinh"
-                             Style="{StaticResource CustomTextBox1}"
-                             materialDesign:HintAssist.Hint="Giới tính"/>
-                </StackPanel>
+                <!-- Header -->
+                <materialDesign:ColorZone Mode="PrimaryMid" Padding="16" CornerRadius="8,8,0,0">
+                    <StackPanel Orientation="Horizontal">
+                        <materialDesign:PackIcon Kind="School" Width="24" Height="24" VerticalAlignment="Center"/>
+                        <TextBlock Margin="8,0,0,0" VerticalAlignment="Center" FontSize="16" FontWeight="Bold">
+                            Quản Lý Học Sinh
+                        </TextBlock>
+                    </StackPanel>
+                </materialDesign:ColorZone>
+
+                <!-- Navigation Menu -->
+                <ListBox x:Name="NavList" Grid.Row="1" Margin="0,8,0,0"
+                        SelectionChanged="NavList_SelectionChanged"
+                        Style="{StaticResource MaterialDesignNavigationListBox}">
+                    <ListBoxItem x:Name="Sprint1Item">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="AccountStudent" Width="24" Height="24" VerticalAlignment="Center"/>
+                            <TextBlock Margin="8,0,0,0" VerticalAlignment="Center">Sprint 1</TextBlock>
+                        </StackPanel>
+                    </ListBoxItem>
+                    <ListBoxItem x:Name="Sprint2Item">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="AccountGroup" Width="24" Height="24" VerticalAlignment="Center"/>
+                            <TextBlock Margin="8,0,0,0" VerticalAlignment="Center">Sprint 2</TextBlock>
+                        </StackPanel>
+                    </ListBoxItem>
+                    <ListBoxItem x:Name="Sprint3Item">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Certificate" Width="24" Height="24" VerticalAlignment="Center"/>
+                            <TextBlock Margin="8,0,0,0" VerticalAlignment="Center">Sprint 3</TextBlock>
+                        </StackPanel>
+                    </ListBoxItem>
+                    <ListBoxItem x:Name="Sprint4Item">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="ChartBox" Width="24" Height="24" VerticalAlignment="Center"/>
+                            <TextBlock Margin="8,0,0,0" VerticalAlignment="Center">Sprint 4</TextBlock>
+                        </StackPanel>
+                    </ListBoxItem>
+                </ListBox>
             </Grid>
+        </materialDesign:Card>
 
-            <Grid Style="{StaticResource grid}">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="3*"/>
-                    <ColumnDefinition Width="0.5*"/>
-                    <ColumnDefinition Width="2*"/>
-                </Grid.ColumnDefinitions>
-
-                <StackPanel Grid.Column="0">
-                    <Label Style="{StaticResource lb}" Content="Email"/>
-                    <TextBox x:Name="txBx_Email" 
-         Style="{StaticResource CustomTextBox2}"/>
-
-                </StackPanel>
-
-                <StackPanel Grid.Column="2">
-                    <Label Style="{StaticResource lb}" Content="Ngày sinh"/>
-                    <DatePicker x:Name="dtPk_NgaySinh"
-                                Style="{StaticResource MaterialDesignFloatingHintDatePicker}"
-                                FontSize="{Binding ElementName=txBx_Email, Path=FontSize}"
-                                Height="53"
-                                Focusable="False"
-                                IsTabStop="True"/>
-                </StackPanel>
-            </Grid>
-
-            <Grid Style="{StaticResource grid}">
-                <StackPanel Grid.Column="0">
-                    <Label Style="{StaticResource lb}" Content="Địa chỉ"/>
-                    <TextBox x:Name="txBx_DiaChi" Style="{StaticResource CustomTextBox2}"/>
-                </StackPanel>
-            </Grid>
-        </StackPanel>
-
-        <StackPanel VerticalAlignment="Top"
-                    HorizontalAlignment="Center"
-                    Width="700"
-                    Height="50"
-                    Margin="0,20,0,0"
-                    Orientation="Horizontal">
-            <Button x:Name="btn_TiepNhan"
-                    Click="btn_TiepNhan_Click"
-                    Content="Tiếp nhận"
-                    Style="{StaticResource MaterialDesignRaisedButton}"
-                    Foreground="White"
-                    Margin="0,0,35,0"
-                    FontSize="16"
-                    Padding="30,5"
-                    MinWidth="100"
-                    MinHeight="40"/>
-            <Button x:Name="btn_LamMoi"
-                    Click="btn_LamMoi_Click"
-                    Content="Làm mới"
-                    Style="{StaticResource MaterialDesignOutlinedButton}"
-                    FontSize="16"
-                    Margin="0,0,35,0"
-                    Padding="30,5"
-                    MinWidth="100"
-                    MinHeight="40"/>
-            <Button x:Name="btn_TimKiem"
-                    Click="btn_TimKiem_Click"
-                    Content="Tìm kiếm"
-                    Style="{StaticResource MaterialDesignOutlinedButton}"
-                    FontSize="16"
-                    Margin="0,0,35,0"
-                    Padding="30,5"
-                    MinWidth="100"
-                    MinHeight="40"/>
-        </StackPanel>
-    </StackPanel>
+        <!-- Nội dung sẽ thay đổi dựa trên sự chọn của thanh điều hướng -->
+        <materialDesign:Card Grid.Column="1" Margin="0,10,10,10" UniformCornerRadius="8">
+            <ContentControl x:Name="MainContent" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+        </materialDesign:Card>
+    </Grid>
 </Window>
