--- a/QuanLyHocSinh/GUI/Sprint1/TimKiemWindow.xaml
+++ b/QuanLyHocSinh/GUI/Sprint1/TimKiemWindow.xaml
@@ -1,9 +1,9 @@
-<Window x:Class="GUI.TimKiemWindow"
+<Window x:Class="GUI.Sprint1.TimKiemWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GUI"
+        xmlns:local="clr-namespace:GUI.Sprint1"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         Title="Tìm kiếm học sinh" Height="440" Width="800"
@@ -15,14 +15,14 @@
                 <ColumnDefinition Width="0.5*"/>
                 <ColumnDefinition Width="2*"/>
             </Grid.ColumnDefinitions>
-            
+
             <TextBox x:Name="txBx_TimKiem"
                      Grid.Column="0"
                      Style="{StaticResource MaterialDesignOutlinedTextBox}"
                      materialDesign:HintAssist.Hint="Nhập thông tin tìm kiếm (Mã HS, Họ tên, Email, Giới tính, Lớp, Địa chỉ)"
                      FontSize="15"
                      Height="50"/>
-            
+
             <Button x:Name="btn_TimKiem"
                     Grid.Column="2"
                     Click="btn_TimKiem_Click"
@@ -83,4 +83,4 @@
         </DataGrid>
 
     </StackPanel>
-</Window> 
+</Window>
