complete sprint 2 GUI

--- a/QuanLyHocSinh/GUI/Sprint2/Sprint2Control.xaml
+++ b/QuanLyHocSinh/GUI/Sprint2/Sprint2Control.xaml
@@ -92,131 +92,7 @@
                         <!-- Student list with ScrollViewer -->
                         <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" MaxHeight="200">
                             <StackPanel x:Name="sp_DanhSachHocSinh" Margin="0,8,0,0">
-                                <!-- Row 1 -->
-                                <Grid Margin="0,4,0,4">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="50"/>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="100"/>
-                                        <ColumnDefinition Width="120"/>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-
-                                    <TextBlock Grid.Column="0" Text="1" Margin="8,8,8,8" VerticalAlignment="Center"/>
-                                    <ComboBox Grid.Column="1" Margin="4,4,4,4"
-                                              Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
-                                    <TextBox Grid.Column="2" Margin="4,4,4,4" IsReadOnly="True"
-                                             Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
-                                    <TextBox Grid.Column="3" Margin="4,4,4,4" IsReadOnly="True"
-                                             Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
-                                    <TextBox Grid.Column="4" Margin="4,4,4,4" IsReadOnly="True"
-                                             Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
-                                </Grid>
-
-                                <!-- Row 2 -->
-                                <Grid Margin="0,4,0,4">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="50"/>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="100"/>
-                                        <ColumnDefinition Width="120"/>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-
-                                    <TextBlock Grid.Column="0" Text="2" Margin="8,8,8,8" VerticalAlignment="Center"/>
-                                    <ComboBox Grid.Column="1" Margin="4,4,4,4"
-                                              Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
-                                    <TextBox Grid.Column="2" Margin="4,4,4,4" IsReadOnly="True"
-                                             Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
-                                    <TextBox Grid.Column="3" Margin="4,4,4,4" IsReadOnly="True"
-                                             Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
-                                    <TextBox Grid.Column="4" Margin="4,4,4,4" IsReadOnly="True"
-                                             Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
-                                </Grid>
-
-                                <!-- Row 3 -->
-                                <Grid Margin="0,4,0,4">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="50"/>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="100"/>
-                                        <ColumnDefinition Width="120"/>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-
-                                    <TextBlock Grid.Column="0" Text="3" Margin="8,8,8,8" VerticalAlignment="Center"/>
-                                    <ComboBox Grid.Column="1" Margin="4,4,4,4"
-                                              Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
-                                    <TextBox Grid.Column="2" Margin="4,4,4,4" IsReadOnly="True"
-                                             Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
-                                    <TextBox Grid.Column="3" Margin="4,4,4,4" IsReadOnly="True"
-                                             Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
-                                    <TextBox Grid.Column="4" Margin="4,4,4,4" IsReadOnly="True"
-                                             Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
-                                </Grid>
-
-                                <!-- Row 4 -->
-                                <Grid Margin="0,4,0,4">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="50"/>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="100"/>
-                                        <ColumnDefinition Width="120"/>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-
-                                    <TextBlock Grid.Column="0" Text="4" Margin="8,8,8,8" VerticalAlignment="Center"/>
-                                    <ComboBox Grid.Column="1" Margin="4,4,4,4"
-                                              Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
-                                    <TextBox Grid.Column="2" Margin="4,4,4,4" IsReadOnly="True"
-                                             Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
-                                    <TextBox Grid.Column="3" Margin="4,4,4,4" IsReadOnly="True"
-                                             Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
-                                    <TextBox Grid.Column="4" Margin="4,4,4,4" IsReadOnly="True"
-                                             Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
-                                </Grid>
-
-                                <!-- Row 5 -->
-                                <Grid Margin="0,4,0,4">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="50"/>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="100"/>
-                                        <ColumnDefinition Width="120"/>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-
-                                    <TextBlock Grid.Column="0" Text="1" Margin="8,8,8,8" VerticalAlignment="Center"/>
-                                    <ComboBox Grid.Column="1" Margin="4,4,4,4"
-              Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
-                                    <TextBox Grid.Column="2" Margin="4,4,4,4" IsReadOnly="True"
-             Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
-                                    <TextBox Grid.Column="3" Margin="4,4,4,4" IsReadOnly="True"
-             Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
-                                    <TextBox Grid.Column="4" Margin="4,4,4,4" IsReadOnly="True"
-             Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
-                                </Grid>
-
-                                <!-- Row 6 -->
-                                <Grid Margin="0,4,0,4">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="50"/>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="100"/>
-                                        <ColumnDefinition Width="120"/>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-
-                                    <TextBlock Grid.Column="0" Text="1" Margin="8,8,8,8" VerticalAlignment="Center"/>
-                                    <ComboBox Grid.Column="1" Margin="4,4,4,4"
-              Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
-                                    <TextBox Grid.Column="2" Margin="4,4,4,4" IsReadOnly="True"
-             Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
-                                    <TextBox Grid.Column="3" Margin="4,4,4,4" IsReadOnly="True"
-             Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
-                                    <TextBox Grid.Column="4" Margin="4,4,4,4" IsReadOnly="True"
-             Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
-                                </Grid>
+                                <!-- Danh sách học sinh sẽ được tạo động trong code-behind -->
                             </StackPanel>
                         </ScrollViewer>
                     </Grid>
